Retrofit implementation e UserAPI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,23 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //dipendenza Retrofit per richieste Server
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //librerie di conversione per le richieste http
+    //Kripton
+    implementation group: 'com.abubusoft', name: 'kripton-retrofit-converter', version: '3.1.0'
+    //Gson
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
+    //Jackson
+    implementation group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.3.0'
+    //Moshi
+    implementation group: 'com.squareup.retrofit2', name: 'converter-moshi', version: '2.3.0'
+    //Protobuf
+    implementation group: 'com.squareup.retrofit2', name: 'converter-protobuf', version: '2.3.0'
+    //Wire
+    implementation group: 'com.squareup.retrofit2', name: 'converter-wire', version: '2.3.0'
+    //Simple XML
+    implementation group: 'com.squareup.retrofit2', name: 'converter-simplexml', version: '2.3.0'
 }
