--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Jun 21 12:35:43 CEST 2023
-sdk.dir=C\:\\Users\\Matteo\\AppData\\Local\\Android\\Sdk
+sdk.dir = /Users/marshall/Library/Android/sdk
