--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.iml
+build.gradle
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -15,3 +16,35 @@ local.properties
 .idea/compiler.xml
 .idea/gradle.xml
 .idea/misc.xml
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+
+# Log/OS Files
+*.log
+
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
+# IntelliJ
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
