--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.ProgettoPWM"
         tools:targetApi="31">
         <activity
-            android:name=".ProfileActivity"
+            android:name=".home.HomeActivity"
             android:exported="false"
             android:label="@string/title_activity_profile"
             android:theme="@style/Theme.ProgettoPWM" />
